--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[build-system]
+requires = ["poetry>=2.0.1"]
+build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "auto_cross_account_access_service"
 version = "1.0.0"
@@ -16,7 +19,7 @@ keywords = ["aws lambda cookbook", "guide to aws lambda", "cdk template", "best 
 license = "MIT-0"
 
 [tool.poetry.dependencies]
-python = "^3.12.0"
+python = "^3.13.0"
 pydantic = {version = "^2.0.3"}
 email-validator = {version = "*"}
 aws-lambda-powertools =  {extras = ["tracer"],version = "^2.20.0"}
@@ -27,13 +30,13 @@ aws-lambda-env-modeler = "*"
 crhelper = "*"
 aws-requests-auth = "*"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 # CDK
 service-cdk = {path = "cdk", develop = true}
-aws-cdk-lib = ">=2.130.0"
+aws-cdk-lib = ">=2.175.0"
 constructs = ">=10.0.0"
 cdk-nag = ">2.0.0"
-"aws-cdk.aws-lambda-python-alpha" = "^2.130.0-alpha.0"
+"aws-cdk.aws-lambda-python-alpha" = "^2.175.0-alpha.0"
 cdk-monitoring-constructs = "*"
 # DEV
 pytest = "*"
@@ -97,8 +100,8 @@ exclude = [
 line-length = 150
 indent-width = 4
 
-# Assume Python 3.12
-target-version = "py312"
+# Assume Python 3.13
+target-version = "py313"
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
