--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ toml = "*"
 poetry-plugin-export = "*"
 mkdocs-render-swagger-plugin = "*"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.9"
+
 [tool.pytest.ini_options]
 testpaths = "tests"
 
